fix: shifted responsiveness to be consistent

--- a/components/ProjectItem/ProjectItem.module.scss
+++ b/components/ProjectItem/ProjectItem.module.scss
@@ -100,8 +100,8 @@
   }
 }
 
-/* Tablet (slightly bigger) styles */
-@media only screen and (min-width: 825px) {
+/* Tablet styles */
+@media only screen and (min-width: 768px) {
   .container {
     .imageWrapper {
       width: 250px;
